--- a/css/estilos.css
+++ b/css/estilos.css
@@ -6,6 +6,7 @@ body {
 
 a {
   color: #515151;
+  text-decoration: none;
 }
 
 header {
@@ -34,10 +35,15 @@ header {
   text-decoration: none;
   color: white;
   transition: .2s;
+  margin-right: 5px;
 }
 
 .button:active {
-  transform: scale(.9);
+  transform: scale(.95);
+}
+
+.button.red:hover{
+  background: #7dcd40;
 }
 
 .button.red {
@@ -45,11 +51,6 @@ header {
   padding: 7px 15px;
   border-radius: 3px;
   /*border-color: yellow;*/
-}
-
-.button.green {
-  background: #7dcd40;
-  /*border-color: purple;*/
 }
 
 nav {
@@ -115,6 +116,12 @@ h1 {
   /*border: 10px solid #ff4842;*/
   position: relative;
   margin-bottom: 20px;
+  transition: .5s;
+  cursor: pointer;
+}
+
+.portada:hover{
+  transform: scale(.98);
 }
 
 .portada .description {
@@ -137,15 +144,22 @@ h1 {
   font-weight: 600;
   margin: 10px 0 15px;
   font-size: 21px;
-  font-weight: bold;
+  font-weight: 600;  
 }
 
 .item-blog {
   width: 300px;
   margin-bottom: 10px;
+  transition: .5s;
+}
+
+.item-blog img, .description h3{
   cursor: pointer;
 }
 
+.item-blog:hover{
+  transform: scale(.96  );
+}
 
 .item-blog .description {
   margin-bottom: 15px;
@@ -198,7 +212,7 @@ h1 {
   padding-top: 15px;
 }
 
-.autor img {
+.autor img, .foto-julian{
   border-radius: 50%;
   vertical-align: middle;
   margin-right: 5px;
@@ -226,6 +240,12 @@ h1 {
   border-radius: 5px;
   position: absolute;
   cursor: pointer;
+  outline: 0;
+  transition: .2s;
+}
+
+.boton-busqueda:active{
+  transform: scale(.9);
 }
 
 .texto-busqueda{
